# dagd

./: .gitignore  .mailmap  .php-cs-fixer.dist.php  .travis.yml  .woodpecker.yaml  LICENSE  README.markdown  README.md  blank_mysql_schema.sql  dagd.cabal  develserver.sh
container/: Dockerfile  config.container.php  dagd-httpd.conf  docker-compose.yaml  entrypoint.sh
documentation/: creating_applications.markdown  proxying_to_dagd.markdown  recommended_apache_setup.markdown  test_suite_git_precommit.markdown
scripts/: check-blacklist  dagd-admin  dagd-worker  sql
sql/: 001.initial.sql  002.pastebin.sql  003.disable_shorturl.sql  004.custom_url_boolean.sql  005.store_response.sql  005.yubnub.sql  006.add_indexes.sql  007.shorturl_unique_ids.sql  008.shorturl_fixed_index.sql  009.hash_shorturl.sql  010.add_owner_ip_index.sql  011.blocked_ips.sql  012.blocked_ips_unique_range.sql  013.non_null_access_ip.sql  014.db_state.sql  014.sha256_access_ip.sql  015.shorturl_access_index.sql  015.shorturl_optional_slash.sql  016.task_queue.sql  017.shorturls_creation_date.sql  018.drop_shorturl_access_ip.sql  019.bucketize_shorturl_access.sql  patcher.php
src/: Main.hs  config.dev.php  config.php  route.php
tests/: DaGdContentTypeTest.php  DaGdExactMatchTest.php  DaGdHeaderRegexTest.php  DaGdRegexTest.php  DaGdResponseCodeTest.php  DaGdResponseRegexTest.php  DaGdSessionRegexTest.php  DaGdTest.php  DaGdTestResultCLICallback.php  DaGdTestResultCallback.php  DaGdTestRunner.php  DaGdUnitTest.php  DaGdUnitTestCallback.php  base.php  cli.php  constants.php  dagd-test  runner.php  (+10 more)
(+181 files in other folders)
