name:                dagd
version:             1.0.0
synopsis:            A set of mostly-networking-related utilities, and a URL shortener.
-- description:
homepage:            http://da.gd/
license:             Apache-2.0
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

executable dagd
  main-is:           Web/Dagd/Main.hs
  -- other-modules:
  build-depends:     base > 4 && < 5
                   , transformers ==0.3.*
                   , bytestring ==0.10.*
                   , text ==0.11.*
                   , postgresql-simple ==0.3.*
                   , imagemagick ==0.0.*
                   , http-conduit ==1.9.*
                   , http-types ==0.8.*
                   , wai ==1.4.*
                   , wai-extra ==1.3.*
                   , whois ==1.1.*
                   , network ==2.4.*
                   , blaze-html ==0.6.*
                   , scotty ==0.5.*
                   , time ==1.4.*
                   , blaze-markup ==0.5.*
                   , cond ==0.4.*
                   , case-insensitive ==1.0.*
                   , random ==1.0.*
